2003-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-entity-insert)
	[shimbun-multipart-entity]: Honor RFC2046 5.1.1 that the boundary
	delimiter must begin with a line break.

2003-11-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-last-visited-buffer): New variable.
	(w3m-popup-buffer): Clear `w3m-last-visited-buffer'.
	(w3m-close-window): Set the last emacs-w3m buffer as
	`w3m-last-visited-buffer'.
	(w3m): Preferably use the last emacs-w3m buffer kept in
	`w3m-last-visited-buffer'.

2003-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-horizontal-recenter): Do nothing besides resetting
	the window's hscroll if `truncate-lines' is nil.
	(w3m-beginning-of-line): Replace `w3m-set-window-hscroll' with
	`set-window-hscroll'.
	(w3m-end-of-line): Make it work identically as `end-of-line' if
	`truncate-lines' is nil.
	(w3m-display-width): Move downward (see the comment).

2003-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-initial-frames): Rename from `w3m-initial-frame';
	keep a list of the frame-IDs.
	(w3m-popup-window-p): Return nil if there is the selection window.
	(w3m-popup-buffer): Copy a copy of `w3m-initial-frames' from
	a visible emacs-w3m buffer to a popped-up emacs-w3m buffer; don't
	set `w3m-initial-frames' for newly created frames there.
	(w3m-add-w3m-initial-frames): New function; add it to
	`create-frame-hook', `after-make-frame-functions' or
	`after-make-frame-hook'.
	(w3m-copy-buffer): Copy a copy of `w3m-initial-frames'.
	(w3m-delete-buffer): Pop up another emacs-w3m buffer instead of
	deleting a frame; remove a deleted frame from `w3m-initial-frames'.
	(w3m-delete-frames-and-windows): Also allow a window or a frame as
	the optional argument; emulate XEmacs version's `one-window-p'.
	(w3m): Set the value for `w3m-initial-frames' even if it is
	invoked in the batch mode.
	(w3m-select-buffer): Delete other emacs-w3m frames and windows.